--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.ChoreChamp"
         tools:targetApi="31">
         <activity
+            android:name=".TaskDetails"
+            android:exported="false" />
+        <activity
+            android:name=".TaskCompletion"
+            android:exported="false" />
+        <activity
+            android:name=".RoomHome"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
